# UniAlgo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
dotProduct/: dotProduct.h
pattern/: stringMatching.cpp  stringMatching.hpp
perceptron/: perceptron.cpp  perceptron.h  test.cpp
unialgo/: CMakeLists.txt
unialgo/graph/: CMakeLists.txt  README.md  adjGraph.hpp  algorithms.cpp  algorithms.hpp  graph.hpp  node.hpp  test_graph.cc
unialgo/math/: CMakeLists.txt  helpers.hpp  math.hpp  sparseMatrix.cpp  sparseMatrix.hpp  sparseVector.hpp  test_sparse.cc
unialgo/pattern/: CMakeLists.txt  bwt.cpp  bwt.hpp  match_test.cc  match_wv_test.cc  matchingAlgo.hpp  stringMatching.cpp  stringMatching.hpp  suffixArray.cpp  suffixArray.hpp  test.cpp  test_sa.cc  wordVecMatching.cpp  wordVecMatching.hpp
unialgo/perceptron/: perceptron.cpp  perceptron.h  test.cpp
unialgo/utils/: CMakeLists.txt  alignedAlloc.cpp  alignedAlloc.h  testTimes.cpp  test_wavelet.cc  waveletMatrix.cpp  waveletMatrix.hpp
unialgo/utils/bitvector/: CMakeLists.txt  bitMaps.hpp  bitVectors.hpp  bitvector.cpp  bitvector.hpp  rankHelper.hpp  test.cc  test.cpp  wordVector.cpp  wordVector.hpp
utils/: alignedAlloc.cpp  alignedAlloc.h
